--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
   "name": "glo_d",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Дипломный проект Академии верстки",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode=production",
+    "watch": "webpack --watch --mode=development",
+    "start": "webpack serve --mode=development --open"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/4dimarik/glo_d.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Golyshev Dmitriy",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/4dimarik/glo_d/issues"
   },
-  "homepage": "https://github.com/4dimarik/glo_d#readme"
+  "homepage": "https://github.com/4dimarik/glo_d#readme",
+  "dependencies": {
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.1"
+  }
 }
