--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/4dimarik/glo_d#readme",
   "dependencies": {
+    "eslint-config-prettier": "^8.3.0",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.1"
