--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/4dimarik/glo_d#readme",
   "dependencies": {
     "eslint-config-prettier": "^8.3.0",
+    "swiper": "^7.4.1",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.1"
