--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
   },
   "homepage": "https://github.com/4dimarik/glo_d#readme",
   "dependencies": {
-    "webpack": "^5.66.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.1"
+    "swiper": "^7.4.1"
+
   },
   "devDependencies": {
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.1",
     "eslint": "^8.6.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-webpack-plugin": "^3.1.1"
+    "eslint-webpack-plugin": "^3.1.1",
+    "eslint-config-prettier": "^8.3.0"
   }
 }
