--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "webpack --mode=production",
     "watch": "webpack --watch --mode=development",
-    "start": "webpack serve --mode=development --open"
+    "start:json": "run-p start server",
+    "start": "webpack serve --mode=development --open ",
+    "server": "json-server --watch ./dist/db/db.json --port=4545"
   },
   "repository": {
     "type": "git",
@@ -21,16 +23,16 @@
   "homepage": "https://github.com/4dimarik/glo_d#readme",
   "dependencies": {
     "swiper": "^7.4.1"
-
   },
   "devDependencies": {
-    "webpack": "^5.66.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.1",
     "eslint": "^8.6.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-webpack-plugin": "^3.1.1",
-    "eslint-config-prettier": "^8.3.0"
+    "npm-run-all": "^4.1.5",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.1"
   }
 }
